--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="select_delivery_station">Select delivery station</string>
     <string name="live_api_error">Live API didn\'t respond.</string>
     <string name="order_impossible_error">Sorry, your order couldn\'t be processed. There must be atleast 60 minutes gap between order time and train arrival time.</string>
+    <string name="api_err_msg">Oops! A technical slip. Please try again.</string>
+    <string name="time_error">Sorry, your order cannot be processed due to time constraints.</string>
 </resources>
